--- a/_notebooks/2022-02-01-blog-eda.ipynb
+++ b/_notebooks/2022-02-01-blog-eda.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/christopherGuan/sample-ds-blog/blob/master/_notebooks/2022-02-01-blog-eda.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "## Amazon Shure MV7 EDA and Sentement Analysis"
       ],
@@ -28,7 +38,7 @@
       "cell_type": "markdown",
       "source": [
         "### Now let's get started!\n",
-        "First thing first, you load all the necessary libraries:"
+        "First thing first, you need to load all the necessary libraries:"
       ],
       "metadata": {
         "id": "0I1n-GrEq6BM"
@@ -4190,7 +4200,8 @@
     "orig_nbformat": 4,
     "colab": {
       "name": "2022-02-01-blog-eda.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
